--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -23,7 +23,8 @@
     }
 }
 
-#Objects:hover .st6 {
-    fill: black;
-    transition: all ease 0.3s;
+.img__1:hover .st6 {
+    transform: rotate(720deg);
+    transform-origin: 80% 80%;
+    transition: all ease 2s;
 }
