--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,11 +1,11 @@
 <section class="projects">
     <div class="container">
         <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
-        <!-- <svg class="airplane"></svg> -->
-        <div class="projects__block">
-            <figure>
 
-                <object class="projects__img projects__img--1" type="image/svg+xml" data="img/svg/technical_aid.svg" height="135px">Your browser does not support SVGs</object>
+        <div class="projects__block">
+            <figure class="projects__img--1">
+
+                <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg" height="135px">Your browser does not support SVGs</object>
                 <figcaption class="projects__caption">
                     <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
